Add main features to release notes from v2.12.0

--- a/umami/umbrel-app.yml
+++ b/umami/umbrel-app.yml
@@ -48,10 +48,16 @@ defaultUsername: admin
 defaultPassword: umami
 dependencies: []
 releaseNotes: >-
-  This update includes several bug fixes and improvements:
-    - Fixed team settings not showing.
-    - Fixed error in event data page.
-    - Fixed text overflow on user journey.
+  This update includes several new features:
+
+    - User Journey Report: Visualize how users navigate through your website, with options to see all paths or specific start/end points.
+    - Goals Report: Set goals for pageviews, events, and event data.
+    - Insights Report: Now displays columns for Visits, Bounce rate, and Visit duration.
+    - Collapse Menu: New tab to collapse the menu for more viewing space in all reports.
+    - Comparison Mode: Compare metrics across two date periods with overlaid data.
+    - Updated Metrics Header: Cosmetic changes with percentage change stats and direction arrows.
+    - Entry/Exit URLs: View the pages where users started and ended their visits.
+    - Hosts Filtering: Filter stats by hostname for multiple domains or subdomains.
 
   Full release notes are found at https://github.com/umami-software/umami/releases.
 path: ""
