tweak release notes

--- a/wikijs/umbrel-app.yml
+++ b/wikijs/umbrel-app.yml
@@ -30,20 +30,9 @@ defaultUsername: ""
 defaultPassword: ""
 torOnly: false
 releaseNotes: >-
-  This update includes several new features and bug fixes:
-  
-    - Added ACR Value option to OIDC Module
-  
-    - Added markdown-it-pivot-table rendering module
-  
+  This release includes an important security update: https://github.com/requarks/wiki/security/advisories/GHSA-xjcj-p2qv-q3rf
 
-    - Reduced git concurrency to avoid lock file conflicts
   
-    - Added compatibility with Node.js 18 and 20
-  
-    - Improved Keycloak authentication post logout redirect for Keycloak 18+
-  
-
-  Full release notes are found at https://github.com/requarks/wiki/releases/tag/v2.5.303
+  Full release notes are found at https://github.com/requarks/wiki/releases
 submitter: Pranshu Agrawal
 submission: https://github.com/getumbrel/umbrel-apps/pull/273
