tweak release notes

--- a/wikijs/umbrel-app.yml
+++ b/wikijs/umbrel-app.yml
@@ -30,9 +30,9 @@ defaultUsername: ""
 defaultPassword: ""
 torOnly: false
 releaseNotes: >-
-  This release includes an important security update: https://github.com/requarks/wiki/security/advisories/GHSA-xjcj-p2qv-q3rf
+  This release includes an important security update for WikiJS: https://github.com/requarks/wiki/security/advisories/GHSA-xjcj-p2qv-q3rf
 
-  
+
   Full release notes are found at https://github.com/requarks/wiki/releases
 submitter: Pranshu Agrawal
 submission: https://github.com/getumbrel/umbrel-apps/pull/273
