Update category and PUID/PGID

--- a/gitlab/docker-compose.yml
+++ b/gitlab/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.7"
 
 services:
+
   gitlab:
     image: zengxs/gitlab:17.2.1-ce.0@sha256:ac08a4dd997b6cd5d00d56c0027629de56ac80d9d30f9c4f75a73da73f5ff1b4
     container_name: gitlab
@@ -11,6 +12,8 @@ services:
         soft: 4096
         hard: 8192
     environment:
+      PUID: 1000
+      PGID: 1000
       GITLAB_OMNIBUS_CONFIG: |
         # Add any other gitlab.rb configuration here, each on its own line
         gitlab_rails['initial_root_password'] = '${APP_PASSWORD}'
