--- a/gitlab/umbrel-app.yml
+++ b/gitlab/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: gitlab
 name: GitLab
 tagline: Software. Faster.
-category: development
+category: developer
 version: "17.2.1"
 port: 8929
 description: >-
