tweak release notes

--- a/trilium-notes/umbrel-app.yml
+++ b/trilium-notes/umbrel-app.yml
@@ -61,14 +61,8 @@ torOnly: false
 submitter: Pranshu Agrawal
 submission: https://github.com/getumbrel/umbrel-apps/pull/199
 releaseNotes: >-
-  This update upgrades Trilium Notes from version 0.60.4 to 0.63.7.
+  Changes:
 
+    - Backported Excalidraw upgrade to 0.17.3
 
-  Version 0.63.7 includes the following changes:
-
-  - Fixed the botched 0.63.6 build (windows binaries are back)
-
-  - Backported Excalidraw upgrade to 0.17.3
-
-
-  Full release notes and detailed information for versions between 0.60.4 and 0.63.7 are available at https://github.com/zadam/trilium/releases
+  Full release notes are available at https://github.com/zadam/trilium/releases
