--- a/syncthing/umbrel-app.yml
+++ b/syncthing/umbrel-app.yml
@@ -31,7 +31,6 @@ releaseNotes: >-
     - Improved user interface with localized time in duration.
     - Added Filipino (fil) translation template.
 
-
-  Full release notes can be found at https://github.com/syncthing/syncthing/releases/tag/v1.27.9
+  Full release notes can be found at https://github.com/syncthing/syncthing/releases.
 submitter: Sam Cymbaluk
 submission: https://github.com/getumbrel/umbrel/pull/1092
