tweak release notes

--- a/syncthing/umbrel-app.yml
+++ b/syncthing/umbrel-app.yml
@@ -26,7 +26,7 @@ gallery:
 path: ""
 defaultPassword: ""
 releaseNotes: >-
-  This update includes several bug fixes and improvements:
+  Changes:
     - Updated dependencies for better performance and security.
     - Improved user interface with localized time in duration.
     - Added Filipino (fil) translation template.
