Attempted to fix dependencies

--- a/nginx-proxy-manager/umbrel-app.yml
+++ b/nginx-proxy-manager/umbrel-app.yml
@@ -18,7 +18,7 @@ releaseNotes: >-
   First release on umbrel!
 developer: nginx-proxy-manager
 website: https://nginxproxymanager.com/
-dependencies:
+dependencies: []
 repo: https://github.com/NginxProxyManager/nginx-proxy-manager
 support: https://github.com/NginxProxyManager/nginx-proxy-manager/issues
 port: 81
