fixed a bunch of issues

--- a/nginx-proxy-manager/umbrel-app.yml
+++ b/nginx-proxy-manager/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: nginx-proxy-manager
-category: Networking
+category: networking
 name: Nginx Proxy Manager
 version: "3.8"
 tagline: Manage Nginx with ease
@@ -15,7 +15,6 @@ description: >-
   • User management, permissions and audit log
 
 releaseNotes: >-
-  First release on umbrel!
 developer: nginx-proxy-manager
 website: https://nginxproxymanager.com/
 dependencies: []
@@ -30,4 +29,4 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 submitter: Umbrel
-submission: https://github.com/getumbrel/umbrel/pull/334
+submission: https://github.com/getumbrel/umbrel-apps/pull/1294
