Tweak release notes

--- a/omada-controller/umbrel-app.yml
+++ b/omada-controller/umbrel-app.yml
@@ -6,7 +6,7 @@ category: networking
 version: "5.14"
 port: 8078
 description: >-
-  Omada Software Controller
+  ⚠️ This app is RAM-intensive (+4GB recommended) and can take 15-20 minutes to start after installation.
 
 
   A Professional and Free On-Premises Omada SDN Controller
@@ -22,10 +22,6 @@ description: >-
   - Real-Time Network Topology : Helps IT admins quickly see and troubleshoot connections at a glance.
 
   - Easier Network Maintenance : WiFi heatmap simulator, visualizable network report, and batch & multi-site management benefit network maintenance.
-
-
-  ⚠️ - This app is RAM-intensive (+4GB recommended) and can take 15-20 minutes to start after installation.
-
 developer: TP-Link / Matt Bentley
 website: https://github.com/mbentley/docker-omada-controller
 submitter: hugofnm
