--- a/omada-controller/umbrel-app.yml
+++ b/omada-controller/umbrel-app.yml
@@ -22,7 +22,7 @@ description: >-
   - Real-Time Network Topology : Helps IT admins quickly see and troubleshoot connections at a glance.
 
   - Easier Network Maintenance : WiFi heatmap simulator, visualizable network report, and batch & multi-site management benefit network maintenance.
-developer: TP-Link / Matt Bentley
+developer: TP-Link
 website: https://github.com/mbentley/docker-omada-controller
 submitter: hugofnm
 submission: https://github.com/getumbrel/umbrel-apps/pull/1196
