update host network comment

--- a/omada-controller/docker-compose.yml
+++ b/omada-controller/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     init: true
     restart: unless-stopped
     stop_grace_period: 60s
-    network_mode: host # Controller needs lots of ports for device discovery
+    network_mode: host # host network mode required for device discovery
     ulimits:
       nofile:
         soft: 4096
