Update to official tagline

--- a/navidrome/umbrel-app.yml
+++ b/navidrome/umbrel-app.yml
@@ -3,7 +3,7 @@ id: navidrome
 category: media
 name: Navidrome
 version: "0.52.5"
-tagline: 🎧 ☁️ Modern Music Server and Streamer compatible with Subsonic/Airsonic
+tagline: Your personal streaming service
 description: >-
   Your Personal Streaming Service
   Navidrome is an open source web-based music collection server and streamer.
