--- a/nginx-proxy-manager/umbrel-app.yml
+++ b/nginx-proxy-manager/umbrel-app.yml
@@ -40,6 +40,7 @@ gallery:
   - https://nginxproxymanager.com/screenshots/dashboard.png
   - https://nginxproxymanager.com/screenshots/proxy-hosts.png
   - https://nginxproxymanager.com/screenshots/proxy-hosts-add.png
+releaseNotes: ""
 dependencies: []
 path: ""
 defaultUsername: "admin@example.com"
