added onlyoffice to this branch

--- a/onlyoffice-nextcloud/umbrel-app.yml
+++ b/onlyoffice-nextcloud/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
 id: onlyoffice-nextcloud
 category: files
-name: ONLYOFFICE Document Server
+name: ONLYOFFICE Docs
 version: "8.1"
 tagline: Run your private office with the ONLYOFFICE
 description: >-
