--- a/onlyoffice-nextcloud/docker-compose.yml
+++ b/onlyoffice-nextcloud/docker-compose.yml
@@ -9,9 +9,9 @@ services:
     image: a4004/onlyoffice-nextcloud-web:1.0.4@sha256:774bd9bda641e6be49286921637840efba050fdfd022934dfd9ee9b6ec8d0a63
     restart: on-failure
     environment:
-      - DOCS_ADDRESS=http://$DEFAULT_INTERFACE_IP:$DOCSERVER_PORT
-      - DOCS_INTERNAL_ADDRESS=http://$DEFAULT_INTERFACE_IP:$DOCSERVER_PORT
-      - NEXTCLOUD_INTERNAL_ADDRESS=http://$DOCKER_INTERFACE_IP:$APP_NEXTCLOUD_PORT
+      - DOCS_ADDRESS=http://$DEVICE_DOMAIN_NAME:$DOCSERVER_PORT
+      - DOCS_INTERNAL_ADDRESS=http://onlyoffice-nextcloud_documentserver_1
+      - NEXTCLOUD_INTERNAL_ADDRESS=http://$GATEWAY_IP:$APP_NEXTCLOUD_PORT
       - NEXTCLOUD_WEB_URL=http://$DEVICE_DOMAIN_NAME:$APP_NEXTCLOUD_PORT
 
   documentserver:
@@ -19,7 +19,7 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     ports:
-      - 5672:80
+      - "${DOCSERVER_PORT}:80"
     environment:
       - JWT_ENABLED=false
       - ONLYOFFICE_HTTPS_HSTS_ENABLED=false
