Change NEXTCLOUD_INTERNAL_ADDRESS to nextcloud web container

--- a/onlyoffice-nextcloud/docker-compose.yml
+++ b/onlyoffice-nextcloud/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       - DOCS_ADDRESS=http://$DEVICE_DOMAIN_NAME:$DOCSERVER_PORT
       - DOCS_INTERNAL_ADDRESS=http://onlyoffice-nextcloud_documentserver_1
-      - NEXTCLOUD_INTERNAL_ADDRESS=http://$GATEWAY_IP:$APP_NEXTCLOUD_PORT
+      - NEXTCLOUD_INTERNAL_ADDRESS=http://nextcloud_web_1
       - NEXTCLOUD_WEB_URL=http://$DEVICE_DOMAIN_NAME:$APP_NEXTCLOUD_PORT
 
   documentserver:
