Tweak release notes

--- a/nextcloud/umbrel-app.yml
+++ b/nextcloud/umbrel-app.yml
@@ -28,6 +28,9 @@ releaseNotes: >-
   This is a major upgrade of Nextcloud on umbrelOS, updating from version 28.0.3 to 29.0.4. The Nextcloud app on the Umbrel app store will now receive updates in alignment with the official Nextcloud release schedule.
 
 
+  This update may take several minutes to complete. Nextcloud may be unavailable for a few minutes during the update process.
+
+
   Full release notes can be found at https://github.com/nextcloud/server/releases
 developer: Nextcloud GmbH
 website: https://nextcloud.com
