--- a/onlyoffice-nextcloud/umbrel-app.yml
+++ b/onlyoffice-nextcloud/umbrel-app.yml
@@ -3,22 +3,12 @@ id: onlyoffice-nextcloud
 category: files
 name: ONLYOFFICE Docs
 version: "8.1"
-tagline: Run your private office with the ONLYOFFICE
+tagline: Online office for Nextcloud
 description: >-
-  ONLYOFFICE Document Server for Nextcloud
+  An online office suite for Nextcloud that enables you to create, edit and collaborate on text documents, spreadsheets and presentations in real time.
 
 
-  Create and edit text docs, spreadsheets and presentations. Operate
-  complex objects and calculations. View images, videos and PDFs. Work
-  on device or choose your cloud.
-
-
-  ONLYOFFICE by Ascensio System SIA offers a powerful office suite that
-  comprises online editors for text documents, spreadsheets and presentations
-  highly compatible with Microsoft Office and OpenDocument file formats.
-  ONLYOFFICE provides users with multiple editing tools and collaborative features
-  ensuring greater team workflow, and seamless work with complex formatting and
-  objects within your web solution.
+  Simply install ONLYOFFICE Docs and follow the in-app instructions to connect it to Nextcloud running on your Umbrel.
 releaseNotes: ""
 developer: Ascensio System SIA
 website: https://www.onlyoffice.com/
