--- a/audiobookshelf/umbrel-app.yml
+++ b/audiobookshelf/umbrel-app.yml
@@ -3,7 +3,7 @@ id: audiobookshelf
 name: Audiobookshelf
 tagline: Audiobook and podcast server
 category: media
-version: "2.11.0"
+version: "2.12.1"
 port: 13378
 description: >-
   Features:
@@ -61,72 +61,21 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  This release brings audiobookshelf from version 2.9.0 to 2.11.0.
-
-
-  Added
-
-  - Create book share links with expiration (admin users only)
-
-  - Email settings option to enable/disable rejecting unauthorized certificates
-
-  - Support for disabling SSRF request filter with env variable
-
-  - Support for custom backup path on backups config page or with env variable
-
-  - Epub ereader setting for font boldness
-
-  - Finnish translations
+  This release brings audiobookshelf from version 2.11.0 to 2.12.1.
 
 
   Fixed
 
-  - Casting podcast episodes
-
-  - Match all authors hitting rate limit
-
-  - Scheduled library scans using old copy of library
-
-  - Changing author name in edit author modal not updating metadata JSON files
-
-  - AB merge tool not working in Debian pkg due to ffmpeg v7
-
-  - Download file ssrfFilter URL
-
-  - Overdrive mediamarkers incorrect timestamp parsing
-
-  - Unhandled exception syncing user progress
-
-  - Server crash from library scanner race condition
-
-  - UI/UX: PDF reader flickering
-
-  - UI/UX: Audio player long author name overflowing
-
-  - UI/UX: Audio player long chapter name overflowing
+  - Server crash loading unicode.so sqlite extension
 
 
   Changed
 
-  - Replace Tone with Ffmpeg for embedding metadata
-
-  - Playback sessions are closed after 36 hours of inactivity
-
-  - User agent string for podcast RSS feed and file download requests
-
-  - Increased time delay between when watcher detects a file and when it scans the folder
-
-  - Prevent editing backup path if it is set using env variable
-
-  - UI/UX: Show publish date in changelog modal
-
-  - UI/UX: Chapters table "End" column changed to a "Duration" column
-
-  - UI/UX: Bookshelf refactor for consistent scaling
-
-  - UI/UX: Cleaner error page for 404s
-
   - More strings translated
+  
+    - Simplified Chinese
+  
+    - German
 
 
   Full release notes can be found at https://github.com/advplyr/audiobookshelf/releases
