Added v2.12 release notes

--- a/audiobookshelf/umbrel-app.yml
+++ b/audiobookshelf/umbrel-app.yml
@@ -61,22 +61,61 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  This release brings audiobookshelf from version 2.11.0 to 2.12.1.
+  Added:
 
+    - Player setting to set skip forward/backward time
+    - “End of chapter” option for sleep timer
+    - Progress percentage for M4B merge and metadata embed tools
+    - Random sort for book/podcast library and series
+    - Support for accent-insensitive search
+    - Setting to show subtitles on book cards
 
-  Fixed
+  Fixed:
 
-  - Server crash loading unicode.so sqlite extension
+    - Filter data not populating when opening item page directly
+    - Podcast episode match not encoding search query
+    - Series and collection RSS feeds maintaining book order
+    - Server crash on duplicate series in OPF
+    - M4B merge and embed tools checking folder permissions and stripping file permissions
+    - Search query lost when switching libraries on the search page
+    - Backups not restoring properly
+    - Series & collection RSS feeds not setting cover image
+    - Media item shares duration limit increased
+    - Debian/PPA re-downloading ffmpeg/ffprobe on every reinstall
+    - Changelog not shown from settings page
+    - Series bookshelf row padding issue
 
+  Changed:
 
-  Changed
+    - Debian package now downloads dependencies on server start
+    - Removed old ffmpeg/ffprobe location in Debian/PPA
+    - Global library search includes genres
+    - OPML import runs in the background to prevent timeouts
+    - Fetch more home page items on wide screens
+    - Backup settings allow unlimited size with “0”
+    - NFO metadata parser supports language
+    - Improved EPUB scanner for correct cover image and OPF metadata parsing
+    - M4B merge tool retains advanced encoding settings
+    - Logs added when an ebook is downloaded
+    - Replaced default session memorystore with stable memorystore
 
-  - More strings translated
-  
-    - Simplified Chinese
-  
+  UI/UX Improvements:
+
+    - Match tab supports clicking on current value to set it
+    - Simplified ItemSearchCard component logic
+    - Formatted numbers on user stats page based on locale
+    - Library stats page moved to library siderail (also in settings nav)
+    - Updated material icons font to material symbols
+
+  Translations:
+
+    - Dutch
+    - Finnish
     - German
-
+    - Hebrew
+    - Italian
+    - Polish
+    - Ukrainian
 
   Full release notes can be found at https://github.com/advplyr/audiobookshelf/releases
 submitter: Jasper
