Update autobrr to v1.44.0

--- a/autobrr/umbrel-app.yml
+++ b/autobrr/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: autobrr
 category: media
 name: autobrr
-version: "1.43.0"
+version: "1.44.0"
 tagline: Modern, easy to use download automation for torrents and usenet
 description: >-
   autobrr is the modern download automation tool for torrents and usenet.
@@ -17,25 +17,18 @@ description: >-
 
   It then sends that torrent file to a download client of your choice. A download client can be anything from qBittorrent, Deluge, Radarr, Sonarr, watch folder, and more.
 releaseNotes: >-
-  New Features:
-
-  - Support for daily shows
-
-  - Added BitHUmen indexer
-
-  - Added FinElite indexer
-
-  - Added missing variables in macros
-
-
-  Bug fixes:
-
-  - Correct error message when providing wrong current password at credential change
-
-  - Custom client for RSS tests
+  This update includes several bug fixes and improvements:
+  
+    - Fixed issues with throttled providers and restart exceptions.
+  
+    - Improved compatibility with case insensitive filesystems and fixed various provider-related errors.
+  
+    - Added support for additional languages and improved logging for subtitle scoring.
+  
+    - Fixed issues with embedded subtitles and improved UI and error handling.
 
 
-  Full release notes are available at https://autobrr.com/release-notes
+  Full release notes are available at https://github.com/autobrr/autobrr/releases.
 developer: autobrr
 website: https://autobrr.com/
 dependencies: []
