Fix music folder permissions issue

--- a/navidrome/umbrel-app.yml
+++ b/navidrome/umbrel-app.yml
@@ -1,8 +1,8 @@
-manifestVersion: 1
+manifestVersion: 1.1
 id: navidrome
 category: media
 name: Navidrome
-version: "0.52.5"
+version: "0.52.5-hotfix"
 tagline: Your personal streaming service
 description: >-
   Navidrome is an open source web-based music collection server and streamer.
@@ -50,6 +50,8 @@ gallery:
 path: ""
 permissions:
   - STORAGE_DOWNLOADS
-releaseNotes: ""
+releaseNotes: >-
+  This is a hotfix release to ensure that the main music folder has the correct permissions set to allow proper access to the music files.
+  There are no new features or bug fixes in this release.
 submitter: owmsoton
 submission: https://github.com/getumbrel/umbrel-apps/pull/1232
