--- a/invoice-ninja/umbrel-app.yml
+++ b/invoice-ninja/umbrel-app.yml
@@ -2,8 +2,8 @@ manifestVersion: 1.1
 id: invoice-ninja
 category: finance
 name: Invoice Ninja
-version: "v5.10.16"
-tagline: We’ll help with the invoicing
+version: "v5.10.19"
+tagline: We'll help with the invoicing
 description: |-
   Invoicing, Quotes, Expenses, Tasks.
 
@@ -20,10 +20,13 @@ gallery:
 - 3.jpg
 path: ''
 releaseNotes: >-
-  This release takes invoice-ninja from version 5.8.33 to 5.10.16.
+  This release updates Invoice Ninja to version 5.10.19.
 
 
-  Full release notes are found at https://github.com/invoiceninja/invoiceninja/releases.
+  Improvements have been made to subscriptions and other minor fixes have been implemented.
+
+
+  For full details, please see the release notes at https://github.com/invoiceninja/invoiceninja/releases.
 
 deterministicPassword: true
 defaultUsername: admin@example.com
