--- a/jackett/umbrel-app.yml
+++ b/jackett/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: jackett
 category: media
 name: Jackett
-version: "0.22.393"
+version: "0.22.411"
 tagline: API support for your favorite torrent trackers
 description: >-
   Jackett works as a proxy server: it translates queries from apps (Sonarr, Radarr, SickRage, CouchPotato, Mylar3, Lidarr, DuckieTV, qBittorrent, Nefarious, etc) into tracker-site-specific http queries,
@@ -34,10 +34,8 @@ gallery:
   - 3.jpg
 path: ""
 releaseNotes: >-
-  Changes:
+  This update includes minor improvements and bug fixes.
 
-    - Added a new public site.
-    - Updated categories for Rutracker.
 
   Full release notes are found at https://github.com/Jackett/Jackett/releases.
 permissions:
