--- a/mealie/umbrel-app.yml
+++ b/mealie/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: mealie
 category: files
 name: Mealie
-version: "1.8.0"
+version: "1.11.0"
 tagline: A Place for All Your Recipes
 description: >-
   Mealie is a self hosted recipe manager and meal planner. Easily add recipes by providing
@@ -25,7 +25,22 @@ torOnly: false
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/608
 releaseNotes: >-
-  This release upgrades Mealie from version 1.0.0beta-5 to 1.8.0.
+  This release upgrades Mealie to version 1.11.0.
 
 
-  Full release notes can be found at https://github.com/mealie-recipes/mealie/releases.
+  New features and improvements:
+  
+    - Show recipe tags on mobile view and meal plan
+    - Push on-hand items to bottom of "Add to Shopping List" dialog
+    - Internationalize sent emails
+    - PWA additions
+    - Make Mealie timezone-aware
+    - Follow redirects during scraping
+    - Offline shopping list improvements
+    - Homepage icon and text update
+  
+  
+  Various bug fixes and performance improvements have also been implemented.
+
+
+  Full release notes can be found at https://github.com/mealie-recipes/mealie/releases/tag/v1.11.0
