Tweak release notes

--- a/mealie/umbrel-app.yml
+++ b/mealie/umbrel-app.yml
@@ -25,9 +25,6 @@ torOnly: false
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/608
 releaseNotes: >-
-  This release upgrades Mealie to version 1.11.0.
-
-
   New features and improvements:
   
     - Show recipe tags on mobile view and meal plan
@@ -43,4 +40,4 @@ releaseNotes: >-
   Various bug fixes and performance improvements have also been implemented.
 
 
-  Full release notes can be found at https://github.com/mealie-recipes/mealie/releases/tag/v1.11.0
+  Full release notes can be found at https://github.com/mealie-recipes/mealie/releases
