Update passky-server to v8.1.7

--- a/passky-server/umbrel-app.yml
+++ b/passky-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: passky-server
 category: files
 name: Passky Server
-version: "8.1.6"
+version: "8.1.7"
 tagline: Simple, modern, lightweight, open source and secure password manager
 description: >-
   With Passky, you can easily and securely store all of your passwords in one place.
@@ -29,7 +29,13 @@ path: ""
 defaultUsername: admin
 deterministicPassword: true
 releaseNotes: >
-  This release includes minor bug fixes and updates.
-  A full list of changes from the previous version can be found here: https://github.com/Rabbit-Company/Passky-Server/tags
+  This release includes bug fixes and updates.
+
+
+  Fixed:
+    - Rare issue that could prevent users from storing their passwords
+
+
+  A full list of changes can be found here: https://github.com/Rabbit-Company/Passky-Server/tags
 submitter: Rabbit Company LLC
 submission: https://github.com/getumbrel/umbrel-apps/pull/384
