Enable debug logs

--- a/mempool/docker-compose.yml
+++ b/mempool/docker-compose.yml
@@ -49,7 +49,7 @@ services:
       MEMPOOL_CACHE_DIR: "/backend/cache"
       MEMPOOL_CLEAR_PROTECTION_MINUTES: "20"
       MEMPOOL_INDEXING_BLOCKS_AMOUNT: "52560"
-      MEMPOOL_STDOUT_LOG_MIN_PRIORITY: "info"
+      MEMPOOL_STDOUT_LOG_MIN_PRIORITY: "debug"
       LIGHTNING_ENABLED: "true"
       LIGHTNING_BACKEND: "lnd"
       LIGHTNING_STATS_REFRESH_INTERVAL: 3600
