Use the beta4 images and hashes

--- a/mempool/docker-compose.yml
+++ b/mempool/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: $APP_MEMPOOL_PORT
       PROXY_AUTH_ADD: "false"
   web:
-    image: mempool/frontend:latest
+    image: mempool/frontend:v3.0.0-beta4@sha256:45d786e8e12f08c632aae1140364cd691363b74810a1b245d2815178c7185b4d
     user: "1000:1000"
     init: true
     restart: on-failure
@@ -23,7 +23,7 @@ services:
       default:
         ipv4_address: $APP_MEMPOOL_IP
   api:
-    image: mempool/backend:latest
+    image: mempool/backend:v3.0.0-beta4@sha256:6922f6e64f889e3fcf371044f35875b029d4ee8571ddf031641f5a4b0a167648
     user: "1000:1000"
     init: true
     restart: on-failure
