--- a/autobrr/umbrel-app.yml
+++ b/autobrr/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: autobrr
 category: media
 name: autobrr
-version: "1.43.0"
+version: "1.44.0"
 tagline: Modern, easy to use download automation for torrents and usenet
 description: >-
   autobrr is the modern download automation tool for torrents and usenet.
@@ -19,20 +19,22 @@ description: >-
 releaseNotes: >-
   New Features:
 
-  - Support for daily shows
+  - Added support for SLOVAK language option in filters
 
-  - Added BitHUmen indexer
-
-  - Added FinElite indexer
-
-  - Added missing variables in macros
+  - Improved container startup process
 
 
   Bug fixes:
 
-  - Correct error message when providing wrong current password at credential change
+  - Fixed FearNoPeer IRC regex for music
 
-  - Custom client for RSS tests
+  - Corrected OPS log score parsing
+
+  - Added notification panel to web interface
+
+  - Improved redirection to onboarding
+
+  - Fixed tooltip placement in web interface
 
 
   Full release notes are available at https://autobrr.com/release-notes
