Tweak release notes link

--- a/calibre-web/umbrel-app.yml
+++ b/calibre-web/umbrel-app.yml
@@ -51,6 +51,6 @@ releaseNotes: >-
     - Fix archiving books from calibre-web side.
     - Security Fix: Cookies are no longer stored for OPDS basic authentication and proxy authentication.
   
-  Full release notes can be found here: https://github.com/janeczku/calibre-web/releases/tag/0.6.23
+  Full release notes can be found here: https://github.com/janeczku/calibre-web/releases
 submitter: Xosten
 submission: https://github.com/getumbrel/umbrel-apps/pull/74
