fix setup instructions

--- a/jackett/umbrel-app.yml
+++ b/jackett/umbrel-app.yml
@@ -13,7 +13,7 @@ description: >-
   🛠️ SET-UP INSTRUCTIONS
   
 
-  1. Base URL Configuration: In Jackett, fill in the "Base URL override" with "http://<the-ip-of-your-umbrel>:9117" without the quotes and replace with the IP of your Umbrel device.
+  1. Base URL Configuration: In Jackett, fill in the "Base URL override" with "http://[the-ip-of-your-umbrel]:9117" without the quotes and replace with the IP of your Umbrel device.
   You can find your device's IP address by visiting your router's admin dashboard or by using an IP scanning tool like Angry IP Scanner.
   This ensures that functionalities like copying a Torznab feed URL to your clipboard work correctly for integration with apps like Sonarr and Radarr.
 
