Add key features to app description

--- a/mealie/umbrel-app.yml
+++ b/mealie/umbrel-app.yml
@@ -8,6 +8,19 @@ description: >-
   Mealie is a self hosted recipe manager and meal planner. Easily add recipes by providing
   the url and Mealie will automatically import the relevant data or add a family recipe with the UI editor. Mealie also
   provides an API for interactions from 3rd party applications.
+
+
+  Key Features:
+  
+  - Recipe imports: Create recipes, by importing from a URL or entering data manually
+
+  - Meal Planner: Use the Meal Planner to plan your what you'll cook for the next week
+
+  - Shopping List: Put the necessary ingredients on your Shopping List, organised into sections of your local supermarket
+
+  - Cookbooks: Group recipes into Cookbooks based on your own criteria
+
+  - Localisation: Translations for 35+ languages
 developer: Hayden
 website: https://docs.mealie.io/
 dependencies: []
