tweak release notes

--- a/passky-server/umbrel-app.yml
+++ b/passky-server/umbrel-app.yml
@@ -29,13 +29,9 @@ path: ""
 defaultUsername: admin
 deterministicPassword: true
 releaseNotes: >
-  This release includes bug fixes and updates.
+  This release fixes a rare issue that could prevent users from storing their passwords.
 
 
-  Fixed:
-    - Rare issue that could prevent users from storing their passwords
-
-
-  A full list of changes can be found here: https://github.com/Rabbit-Company/Passky-Server/tags
+  A full list of changes can be found here: https://github.com/Rabbit-Company/Passky-Server/releases
 submitter: Rabbit Company LLC
 submission: https://github.com/getumbrel/umbrel-apps/pull/384
