tweak release notes again

--- a/passky-server/umbrel-app.yml
+++ b/passky-server/umbrel-app.yml
@@ -32,6 +32,6 @@ releaseNotes: >
   This release fixes a rare issue that could prevent users from storing their passwords.
 
 
-  A full list of changes can be found here: https://github.com/Rabbit-Company/Passky-Server/releases
+  Full release notes are found at https://github.com/Rabbit-Company/Passky-Server/releases
 submitter: Rabbit Company LLC
 submission: https://github.com/getumbrel/umbrel-apps/pull/384
